antlr/NomParser.js
// Generated from Nom.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import NomListener from './NomListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class NomParser extends antlr4.Parser {

    static grammarFileName = "Nom.g4";
    static literalNames = [ null, "'{'", "'expr'", "'}'", "'$'", "'closed'", 
                            "'sd_type'", "'sd_level'", "'offset_type'", 
                            "'height'", "'width'", "'hidden'", "'begincap'", 
                            "'endcap'", "'surface'", "'cross'", "'segs'", 
                            "'order'", "'type'", "'color'", "'projection'", 
                            "'cameraID'", "'frustum'", "'rotate'", "'scale'", 
                            "'translate'", "'crotate'", "'ctranslate'", 
                            "'point'", "'azimuth'", "'twist'", "'reverse'", 
                            "'mintorsion'", "'func'", "'funcX'", "'funcY'", 
                            "'funcZ'", "'endpoint'", "'polyline'", "'endpolyline'", 
                            "'sweep'", "'crosssection'", "'endcrosssection'", 
                            "'path'", "'endpath'", "'endsweep'", "'controlpoint'", 
                            "'endcontrolpoint'", "'face'", "'endface'", 
                            "'object'", "'endobject'", "'mesh'", "'endmesh'", 
                            "'group'", "'endgroup'", "'circle'", "'endcircle'", 
                            "'spiral'", "'endspiral'", "'sphere'", "'endsphere'", 
                            "'ellipsoid'", "'endellipsoid'", "'cylinder'", 
                            "'endcylinder'", "'hyperboloid'", "'endhyperboloid'", 
                            "'dupin'", "'enddupin'", "'mobiusstrip'", "'endmobiusstrip'", 
                            "'helix'", "'endhelix'", "'funnel'", "'endfunnel'", 
                            "'tunnel'", "'endtunnel'", "'torusknot'", "'endtorusknot'", 
                            "'torus'", "'endtorus'", "'gencartesiansurf'", 
                            "'endgencartesiansurf'", "'genparametricsurf'", 
                            "'endgenparametricsurf'", "'genimplicitsurf'", 
                            "'endgenimplicitsurf'", "'beziercurve'", "'endbeziercurve'", 
                            "'bspline'", "'endbspline'", "'instance'", "'endinstance'", 
                            "'endsurface'", "'background'", "'endbackground'", 
                            "'foreground'", "'endforeground'", "'insidefaces'", 
                            "'endinsidefaces'", "'outsidefaces'", "'endoutsidefaces'", 
                            "'offsetfaces'", "'endoffsetfaces'", "'frontfaces'", 
                            "'endfrontfaces'", "'backfaces'", "'endbackfaces'", 
                            "'rimfaces'", "'endrimfaces'", "'bank'", "'endbank'", 
                            "'delete'", "'enddelete'", "'subdivision'", 
                            "'endsubdivision'", "'sharp'", "'endsharp'", 
                            "'offset'", "'endoffset'", "'include'", "'endinclude'", 
                            "'light'", "'endlight'", "'camera'", "'endcamera'", 
                            "'viewport'", "'endviewport'", "'set'", null, 
                            null, "'('", "')'", "'+'", "'-'", "'*'", "'/'", 
                            "'>'", "'<'", "'='", "'.'", "'^'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "IDENT", "SCIENTIFIC_NUMBER", "LPAREN", 
                             "RPAREN", "PLUS", "MINUS", "TIMES", "DIV", 
                             "GT", "LT", "EQ", "POINT", "POW", "WS", "COMMENT", 
                             "LINE_COMMENT" ];
    static ruleNames = [ "file", "expression", "atom", "scientific", "ident", 
                         "idList", "vector3", "argClosed", "argSdFlag", 
                         "argSdLevel", "argOffsetFlag", "argHeight", "argWidth", 
                         "argHidden", "argBeginCap", "argEndCap", "argSurface", 
                         "argCross", "argSegs", "argOrder", "argLightType", 
                         "argLightColor", "argCameraProjection", "argCameraID", 
                         "argCameraFrustum", "argTransform", "argRotate", 
                         "argTranslate", "argColor", "argControlRotate", 
                         "argControlScale", "argPoint", "argAzimuth", "argTwist", 
                         "argReverse", "argMintorsion", "argFunc", "argFuncX", 
                         "argFuncY", "argFuncZ", "command", "set", "deleteFace" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = NomParser.ruleNames;
        this.literalNames = NomParser.literalNames;
        this.symbolicNames = NomParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 1:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 6);
    		case 1:
    			return this.precpred(this._ctx, 5);
    		case 2:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	file() {
	    let localctx = new FileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, NomParser.RULE_file);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 89;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===NomParser.T__13 || _la===NomParser.T__27 || ((((_la - 38)) & ~0x1f) == 0 && ((1 << (_la - 38)) & ((1 << (NomParser.T__37 - 38)) | (1 << (NomParser.T__39 - 38)) | (1 << (NomParser.T__45 - 38)) | (1 << (NomParser.T__47 - 38)) | (1 << (NomParser.T__49 - 38)) | (1 << (NomParser.T__51 - 38)) | (1 << (NomParser.T__53 - 38)) | (1 << (NomParser.T__55 - 38)) | (1 << (NomParser.T__57 - 38)) | (1 << (NomParser.T__59 - 38)) | (1 << (NomParser.T__61 - 38)) | (1 << (NomParser.T__63 - 38)) | (1 << (NomParser.T__65 - 38)) | (1 << (NomParser.T__67 - 38)))) !== 0) || ((((_la - 70)) & ~0x1f) == 0 && ((1 << (_la - 70)) & ((1 << (NomParser.T__69 - 70)) | (1 << (NomParser.T__71 - 70)) | (1 << (NomParser.T__73 - 70)) | (1 << (NomParser.T__75 - 70)) | (1 << (NomParser.T__77 - 70)) | (1 << (NomParser.T__79 - 70)) | (1 << (NomParser.T__81 - 70)) | (1 << (NomParser.T__83 - 70)) | (1 << (NomParser.T__85 - 70)) | (1 << (NomParser.T__87 - 70)) | (1 << (NomParser.T__89 - 70)) | (1 << (NomParser.T__91 - 70)) | (1 << (NomParser.T__94 - 70)) | (1 << (NomParser.T__96 - 70)) | (1 << (NomParser.T__98 - 70)) | (1 << (NomParser.T__100 - 70)))) !== 0) || ((((_la - 103)) & ~0x1f) == 0 && ((1 << (_la - 103)) & ((1 << (NomParser.T__102 - 103)) | (1 << (NomParser.T__104 - 103)) | (1 << (NomParser.T__106 - 103)) | (1 << (NomParser.T__108 - 103)) | (1 << (NomParser.T__110 - 103)) | (1 << (NomParser.T__112 - 103)) | (1 << (NomParser.T__114 - 103)) | (1 << (NomParser.T__116 - 103)) | (1 << (NomParser.T__118 - 103)) | (1 << (NomParser.T__120 - 103)) | (1 << (NomParser.T__122 - 103)) | (1 << (NomParser.T__124 - 103)) | (1 << (NomParser.T__126 - 103)))) !== 0)) {
	            this.state = 86;
	            this.command();
	            this.state = 91;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 92;
	        this.match(NomParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 2;
	    this.enterRecursionRule(localctx, 2, NomParser.RULE_expression, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new CallContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 95;
	            this.ident();
	            this.state = 96;
	            this.match(NomParser.LPAREN);
	            this.state = 97;
	            this.expression(0);
	            this.state = 98;
	            this.match(NomParser.RPAREN);
	            break;

	        case 2:
	            localctx = new UnaryOpContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 100;
	            localctx.op = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!(_la===NomParser.PLUS || _la===NomParser.MINUS)) {
	                localctx.op = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 101;
	            this.expression(7);
	            break;

	        case 3:
	            localctx = new SubExpParenContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 102;
	            this.match(NomParser.LPAREN);
	            this.state = 103;
	            this.expression(0);
	            this.state = 104;
	            this.match(NomParser.RPAREN);
	            break;

	        case 4:
	            localctx = new SubExpCurlyContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 106;
	            localctx.beg = this.match(NomParser.T__0);
	            this.state = 107;
	            localctx.sec = this.match(NomParser.T__1);
	            this.state = 108;
	            this.expression(0);
	            this.state = 109;
	            localctx.end = this.match(NomParser.T__2);
	            break;

	        case 5:
	            localctx = new AtomExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 111;
	            this.atom();
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 125;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 123;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new BinOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, NomParser.RULE_expression);
	                    this.state = 114;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 115;
	                    localctx.op = this.match(NomParser.POW);
	                    this.state = 116;
	                    this.expression(7);
	                    break;

	                case 2:
	                    localctx = new BinOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, NomParser.RULE_expression);
	                    this.state = 117;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 118;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===NomParser.TIMES || _la===NomParser.DIV)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 119;
	                    this.expression(6);
	                    break;

	                case 3:
	                    localctx = new BinOpContext(this, new ExpressionContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, NomParser.RULE_expression);
	                    this.state = 120;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 121;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===NomParser.PLUS || _la===NomParser.MINUS)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 122;
	                    this.expression(5);
	                    break;

	                } 
	            }
	            this.state = 127;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	atom() {
	    let localctx = new AtomContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, NomParser.RULE_atom);
	    try {
	        this.state = 130;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case NomParser.SCIENTIFIC_NUMBER:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 128;
	            this.scientific();
	            break;
	        case NomParser.T__3:
	        case NomParser.IDENT:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 129;
	            this.ident();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	scientific() {
	    let localctx = new ScientificContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, NomParser.RULE_scientific);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 132;
	        this.match(NomParser.SCIENTIFIC_NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ident() {
	    let localctx = new IdentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, NomParser.RULE_ident);
	    try {
	        this.state = 137;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case NomParser.IDENT:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 134;
	            this.match(NomParser.IDENT);
	            break;
	        case NomParser.T__3:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 135;
	            this.match(NomParser.T__3);
	            this.state = 136;
	            this.match(NomParser.IDENT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	idList() {
	    let localctx = new IdListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, NomParser.RULE_idList);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 139;
	        this.match(NomParser.LPAREN);
	        this.state = 143;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===NomParser.T__3 || _la===NomParser.IDENT) {
	            this.state = 140;
	            localctx._ident = this.ident();
	            localctx.identList.push(localctx._ident);
	            this.state = 145;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 146;
	        this.match(NomParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	vector3() {
	    let localctx = new Vector3Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, NomParser.RULE_vector3);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 148;
	        this.match(NomParser.LPAREN);
	        this.state = 149;
	        this.expression(0);
	        this.state = 150;
	        this.expression(0);
	        this.state = 151;
	        this.expression(0);
	        this.state = 152;
	        this.match(NomParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argClosed() {
	    let localctx = new ArgClosedContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, NomParser.RULE_argClosed);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 154;
	        this.match(NomParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argSdFlag() {
	    let localctx = new ArgSdFlagContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, NomParser.RULE_argSdFlag);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 156;
	        this.match(NomParser.T__5);
	        this.state = 157;
	        this.ident();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argSdLevel() {
	    let localctx = new ArgSdLevelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, NomParser.RULE_argSdLevel);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 159;
	        this.match(NomParser.T__6);
	        this.state = 160;
	        this.expression(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argOffsetFlag() {
	    let localctx = new ArgOffsetFlagContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, NomParser.RULE_argOffsetFlag);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162;
	        this.match(NomParser.T__7);
	        this.state = 163;
	        this.ident();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argHeight() {
	    let localctx = new ArgHeightContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, NomParser.RULE_argHeight);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 165;
	        this.match(NomParser.T__8);
	        this.state = 166;
	        this.expression(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argWidth() {
	    let localctx = new ArgWidthContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, NomParser.RULE_argWidth);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.match(NomParser.T__9);
	        this.state = 169;
	        this.expression(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argHidden() {
	    let localctx = new ArgHiddenContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, NomParser.RULE_argHidden);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 171;
	        this.match(NomParser.T__10);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argBeginCap() {
	    let localctx = new ArgBeginCapContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, NomParser.RULE_argBeginCap);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 173;
	        this.match(NomParser.T__11);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argEndCap() {
	    let localctx = new ArgEndCapContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, NomParser.RULE_argEndCap);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.match(NomParser.T__12);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


